objects/LAT_AGG__c.object
<CustomObject>
    <fields>
        <fullName>LAT_ArgumentsAndBenefits__c</fullName>
        <label>Argumentação e Benefícios para o Cliente</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_ClientBussinesOpportunities__c</fullName>
        <label>Oportunidades de Negocio para o Cliente</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contato</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AGG</relationshipLabel>
        <relationshipName>AGG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_RecurrentObjections__c</fullName>
        <label>Objeções Recorrentes do Cliente</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Visit__c</fullName>
        <label>Visita</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipLabel>AGG</relationshipLabel>
        <relationshipName>AGG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AGG</label>
    <nameField>
        <displayFormat>AGG-{0000}</displayFormat>
        <label>AGG Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AGG</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>